# srb2-legacy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SRB2.cbp  SRB2_common.props  Srb2.dev  fuck.diff  srb2-legacy-appimage.sh  srb2legacy.desktop
.github/workflows/: android.yml  emscripten.yml  linux-amd64-appimage.yml  linux-arm64-appimage.yml  linux-x86_64-appimage.yml  macos.yml  ubuntu-amd64.yml  ubuntu-arm64.yml  ubuntu.yml  windows-x86.yml  windows-x86_64.yml  windows.yml
PKGBUILD/srb2-legacy-data/: PKGBUILD
PKGBUILD/srb2-legacy-git/: PKGBUILD  srb2legacy.desktop
android/: README.md  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/kartkrew/ringracers/: SRB2Game.java
android/app/src/main/java/org/stjr/srb2legacy/: SRB2Game.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: CMakeLists.txt  README.txt  org.srb2.srb2-legacy.metainfo.xml
cmake/Modules/: FindGME.cmake  FindOPENMPT.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  GitUtilities.cmake  LibFindMacros.cmake
extras/conf/: Srb2-21slopeszb.cfg
flatpak/: io.github.PAS.srb2-legacy.metainfo.xml  io.github.PAS.srb2-legacy.yaml
src/: CMakeLists.txt  Makefile  Sourcefile  am_map.c  apng.h  b_bot.c  byteptr.h  command.c  command.h  comptime.c  config.h.in  console.c  console.h  d_clisrv.c  d_clisrv.h  d_event.h  d_main.c  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_player.h  d_think.h  d_ticcmd.h  dehacked.c  dehacked.h  doomdata.h  doomdef.h  doomstat.h  doomtype.h  f_finale.c  f_finale.h  f_wipe.c  filesrch.c  g_game.c  g_game.h  g_input.c  (+115 more)
src/Makefile.d/: dedicated.mk  detect.mk  features.mk  nix.mk  old.mk  platform.mk  sdl.mk  versions.mk  win32.mk
src/android-jni/: Android.mk  CMakeLists.txt  jni_android.c  jni_android.h  ndk_crash_handler.c  ndk_crash_handler.h  ndk_strings.h
src/blua/: Sourcefile  lauxlib.h  ldo.c  ldo.h  liolib.c  lobject.c  luaconf.h
src/dedicated/: CMakeLists.txt  Sourcefile  i_main.c  i_sound.c  i_system.c  i_video.c
src/djgppdos/: i_system.c  i_video.c
src/dummy/: i_system.c
src/hardware/: Sourcefile  hw3dsdrv.h  hw_batching.c  hw_batching.h  hw_bsp.c  hw_cache.c  hw_clip.c  hw_clip.h  hw_data.h  hw_defs.h  hw_dll.h  hw_draw.c  hw_drv.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c  hw_md2.h  hw_model.c  hw_model.h  hw_shaders.c  hw_shaders.h  hw_trick.c  hws_data.h
src/hardware/r_opengl/: ogl_win.c  r_opengl.c  r_opengl.h
src/hardware/s_ds3d/: s_ds3d.c
src/hardware/s_fmod/: s_fmod.c
src/hardware/s_openal/: s_openal.c
src/sdl/: CMakeLists.txt  MakeNIX.cfg  Sourcefile  Srb2SDL-vc10.vcxproj  Srb2SDL-vc10.vcxproj.filters  Srb2SDL-vc9.vcproj  Srb2SDL.props  hwsym_sdl.c  i_main.c  i_system.c  i_video.c  mixer_sound.c  ogl_sdl.c  ogl_sdl.h  sdl_sound.c  sdlmain.h
src/sdl/SDL_main/: SDL_android_main.c
src/sdl/emscripten/: srb2legacy.html
src/sdl/macosx/Srb2mac.xcodeproj/: project.pbxproj
src/sdl12/: i_main.c  i_system.c  i_video.c  mixer_sound.c  ogl_sdl.c  sdl_sound.c
src/sdl12/macosx/Srb2mac.xcodeproj/: project.pbxproj
src/web/: CMakeLists.txt  elm.json  index.html  package-lock.json  package.json  webpack.config.js
src/web/elm/: Main.elm  Msg.elm  Status.elm
src/web/elm/Views/: AddonPicker.elm  Button.elm  Help.elm
src/web/js/: SRB2.js  index.js
src/win32/: Srb2win-vc10.vcxproj  Srb2win-vc10.vcxproj.filters  Srb2win-vc9.vcproj  Srb2win.props  win_dbg.c  win_dll.c  win_snd.c  win_sys.c  win_vid.c
src/win32ce/: win_cd.c  win_dll.c  win_vid.c
tools/libwad/src/: wad_static.c
